test-package-compiler/src/snapshots/test_package_compiler__generated_tests__alias_unqualified_import.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/alias_unqualified_import"
---
//// /out/lib/the_package/_gleam_artefacts/one.abstr
<539 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<36 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<568 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<42 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>
