test-package-compiler/src/snapshots/test_package_compiler__generated_tests__duplicate_module_dev.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/duplicate_module_dev"
---
error: Duplicate module

The module `main` is defined multiple times.

First:  src/main.gleam
Second: dev/main.gleam
