test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_bug_752.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_bug_752"
---
//// /out/lib/the_package/_gleam_artefacts/one.abstr
<390 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<31 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<545 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<41 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>

//// /out/lib/the_package/include/two_Two.hrl
-record(two, {
    thing :: one:one(integer())
}).
