test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_empty.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_empty"
---
//// /out/lib/the_package/_gleam_artefacts/empty.abstr
<291 byte binary>

//// /out/lib/the_package/_gleam_artefacts/empty.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/empty.cache_meta
<29 byte binary>

//// /out/lib/the_package/ebin/empty.beam
<0 byte binary>

//// /out/lib/the_package/ebin/hello_joe.app
{application, hello_joe, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [empty]},
    {registered, []}
]}.


//// Warning
warning: Empty module

Module 'empty' contains no public definitions.

Hint: You can safely remove this module.
