test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_escape_names.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_escape_names"
---
//// /out/lib/the_package/_gleam_artefacts/one.abstr
<490 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<32 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<1499 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<76 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>
